# echo_link

./: .env  Cargo.toml  diesel.toml
migrations/2024-09-16-061118_create_users_table/: up.sql
src/: main.rs  schema.rs
src/config/: db.rs
src/handlers/: user_handlers.rs
src/models/: user.rs
src/routes/: mod.rs  user_routes.rs
