[package]
name = "echo_link"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = [
  "postgres",
  "r2d2",
  "uuid",
  "chrono",
  "serde_json",
] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
